Refactor CSS styles and update FXML files for improved UI consistency
- Simplified and organized CSS styles in `beranda.css` for better readability and maintainability.
- Added new styles for group news and activity log sections.
- Updated FXML files to link appropriate CSS stylesheets for consistent styling across components.
- Introduced a new `groupPage.css` for group-related UI elements.
- Enhanced navigation sidebar and task container styles for better user experience.
- Made minor adjustments to button styles and layout properties in various FXML files.